       Internet explorer on Vista and later. (Stefan)
- NEW: More options in the commit dialog to check
       different items. (Stefan)

Version 1.6.3
- CHG: Some small improvements to the status cache. (Stefan)
- CHG: When diffing from the log dialog, the peg revision is set to
       the selected revision instead of HEAD. (Stefan)
- BUG: If a commit failed, TSVN could crash in case the svn library returned
       an empty error object. (Stefan)
- BUG: The merge options to ignore whitespaces were ignored. (Stefan)
- BUG: The switch dialog allowed an empty url. (Stefan)
- BUG: bugtraq: texts in the commit dialog were colored/linked wrong
       if the second regex matched not at the end of the first regex. (Stefan)
- BUG: The status cache didn't release open handles long enough for
       drives to be able to unmount without force. (Stefan)
- BUG: The url browse button in the checkout/export dialog wasn't enabled
       even if an url was entered to browse for. (Stefan)
- BUG: A checkout could fail due to a wrong peg revision. (Stefan)
- BUG: The status cache could fail to monitor working copies
       for changes. (Stefan)
- BUG: An incomplete info text was shown for tree conflicts 
       "incoming add upon merge". (Stefan)

Version 1.6.2
- BUG: Error message about non-LF commit messages when using messages with
       non-ASCII text. (Stefan)
- BUG: Dragging files/folders from the repository browser or the status
       list control to the explorer could result in a DEP exception. (Stefan)
- BUG: The pathList passed to CheckCommit() only contained the parent folder
       for recursive commits, not all selected items. (Stefan)
- BUG: TortoiseMerge duplicated the last line when saving UCS-2 files. (Stefan)
- BUG: Using a commit message from the history could result in an error
       about "only numbers are allowed" when trying to commit. (Stefan)
- BUG: Stealing a lock failed when using serf instead of neon. (Stefan)
- BUG: Segfault in TSVNCache. (Stefan)